--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,12 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "author": "arunkjojo",
-  "license": "ISC",
+  "author": "Arun Jojo <arunkjojo@gmail.com>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arunkjojo/logistifie.git"
+  },
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
